# media-order

./: Cargo.toml  README.md  justfile  local_imdb.sqlite  rustfmt.toml
core/: .env.example  Cargo.toml
core/benches/: video.rs
core/src/: errors.rs  lib.rs  main.rs  types.rs  video.rs
core/src/tests/video/: all_films.txt  full_paths.txt  mod.rs  test_set.json
imdb/: Cargo.toml
imdb/migration/: Cargo.toml
imdb/src/: errors.rs  lib.rs  main.rs
imdb/src/local/: mod.rs  title.rs
imdb/src/local/entities/: mod.rs  prelude.rs  titles.rs
imdb/src/local/migration/: m20231030_000001_create_table.rs  mod.rs
imdb/src/tests/local/: mod.rs  title.akas.tsv
