[package]
name = "media-order-core"
version = "0.1.0"
authors = ["Dmitry Blinov <dblinov76@gmail.com>"]
edition = "2021"
license = "MIT"

[[bench]]
name = "video"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dotenvy = "0.15"
ffmpeg-the-third = {version = "1", features = ["codec","format"]}
file-format = {version = "0.21", features = ["reader", "reader-zip"]}
lazy_static = "1"
log = {version = "0.4", features = ["std"]}
simple_logger = "4"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
